# hmmquant

./: .gitignore  README.md  pyproject.toml
data/: model.pkl
my_script/: data_preprocess.ipynb  get_data_prototype.ipynb
src/hmmquant/: __init__.py  __main__.py  backtest.py  backtraderdemo.py  data_proc.py  hmm_workflow.py  model.py  params.py  summary.py
src/hmmquant/utils/: __init__.py  calc.py  data_proc.py  draw.py  log.py
tests/: __init__.py  test_hmm.py
回测结果/: macd.md  rsi.md  rsi.py
