[tool.poetry]
name = "hmmquant"
version = "0.1.0"
description = ""
authors = ["jiangzhuochi <1053067021@qq.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
numpy = "^1.21.1"
pandas = "^1.3.1"
matplotlib = "^3.4.2"
hmmlearn = "^0.2.6"
requests = "^2.26.0"
scipy = "^1.7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.7b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
